--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <span class="papertitle">Counseling Summarization using Mental Health Knowledge Guided Utterance Filtering</span><br>
                                 <!-- <span style="font-family: 'Roboto', sans-serif; line-height: 1.1; font-weight: 450;"><i class="fas fa-trophy"></i> <b>Best Paper Award</b></span> <br/> -->
                                 <span class="thisauthor"> Aseem Srivastava</span>, Tharun Suresh, Sarah (Grin) Lord, Md. Shad Akhtar, Tanmoy Chakraborty<br>
-                                <span class="conf"><a class="confshort" href="http://www2021.thewebconf.org/">KDD'22</a> | ACM's Knowledge Discovery and Data Mining 2022</span><br>     
+                                <span class="conf"><a class="confshort" href="http://www2021.thewebconf.org/">KDD'22</a> | ACM's Knowledge Discovery and Data Mining - SIGKDD 2022</span><br>     
                                 <a class="tag" href="https://arxiv.org/abs/2206.03886" target="_blank">paper</a>
                                 <!-- <a class="tag" href="#" target="_blank">video</a> -->
                             </p>
@@ -137,7 +137,7 @@
                             <p class="paper my-2 pl-2">
                                 <span class="papertitle">Speaker and Time-aware Joint Contextual Learning for Dialogue-act Classification in Counselling Conversations</span><br>
                                 Ganeshan Malhotra, Abdul Waheed, <span class="thisauthor"> Aseem Srivastava</span>, Md Shad Akhtar, Tanmoy Chakraborty<br>
-                                <span class="conf"><a class="confshort" href="https://2020.emnlp.org/"> ICWSM'22</a> | The International AAAI Conference on Web and Social Media 2022</span><br>                        
+                                <span class="conf"><a class="confshort" href="https://2020.emnlp.org/"> WSDM'22</a> | The 15th ACM International WSDM Conference</span><br>                        
                                 <a class="tag" href="https://dl.acm.org/doi/10.1145/3488560.3498509" target="_blank">paper</a>
                                 <a class="tag" href="https://github.com/LCS2-IIITD/SPARTA_WSDM2022" target="_blank">code</a>
                                 <a class="tag" href="https://github.com/LCS2-IIITD/SPARTA_WSDM2022/blob/main/README.md#hope-dataset-access-request" target="_blank">dataset</a>
