Google Research Week

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     <p class="header pt-3">News and Updates</p>
 
                     <ul>
+                        <li><b>January 2023:</b> I will be attending Google Research Week 2023.</li>
                         <li><b>June 2022:</b> Received ACM India Travel Award to present our paper in KDD.</li>
                         <li><b>May 2022:</b> Our paper on counseling summarization got accepted at KDD 2022.</li>
                         <li><b>May 2022:</b> Received ACL 2022 Student Volunteer Award.</li>
