www paper added

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     <p class="header pt-3">News and Updates</p>
 
                     <ul>
+                        <li><b>January 2023:</b> Our paper on counseling dialogue generation got accepted at WWW'23.</li>
                         <li><b>January 2023:</b> I will be attending Google Research Week 2023.</li>
                         <li><b>June 2022:</b> Received ACM India Travel Award to present our paper in KDD.</li>
                         <li><b>May 2022:</b> Our paper on counseling summarization got accepted at KDD 2022.</li>
@@ -92,6 +93,13 @@
                     
                     <hr>
                     <p class="header pt-3">Publications</p>
+                    <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
+                                <span class="papertitle">Response-act Guided Reinforced Dialogue Generation for Mental Health Counseling</span><br>
+                                <span class="thisauthor"> Aseem Srivastava</span>, Ishan Pandey, Md. Shad Akhtar, Tanmoy Chakraborty<br>
+                                <span class="conf"><a class="confshort" href="https://www2023.thewebconf.org/">WWW'23</a> | The 2023 ACM Web Conference (aka WWW)</span><br>     
+                                <!-- <a class="tag" href="https://arxiv.org/abs/2206.03886" target="_blank">paper</a> -->
+                    </p></div></div>
+
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                                 <span class="papertitle">Counseling Summarization using Mental Health Knowledge Guided Utterance Filtering</span><br>
                                 <!-- <span style="font-family: 'Roboto', sans-serif; line-height: 1.1; font-weight: 450;"><i class="fas fa-trophy"></i> <b>Best Paper Award</b></span> <br/> -->
