--- a/index.html
+++ b/index.html
@@ -106,9 +106,11 @@
                                 <span class="papertitle">Response-act Guided Reinforced Dialogue Generation for Mental Health Counseling</span><br>
                                 <span class="thisauthor"> Aseem Srivastava</span>, Ishan Pandey, Md. Shad Akhtar, Tanmoy Chakraborty<br>
                                 <span class="conf"><a class="confshort" href="https://www2023.thewebconf.org/">WWW'23</a> | The 2023 ACM Web Conference (aka WWW)</span><br>     
-                                <!-- <a class="tag" href="https://arxiv.org/abs/2206.03886" target="_blank">paper</a> -->
+                                <a class="tag" href="https://dl.acm.org/doi/10.1145/3543507.3583380" target="_blank">paper</a>
+                                <a class="tag" href="https://github.com/LCS2-IIITD/READER" target="_blank">code</a>
                     </p></div></div>
 
+                    
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                                 <span class="papertitle">Counseling Summarization using Mental Health Knowledge Guided Utterance Filtering</span><br>
                                 <!-- <span style="font-family: 'Roboto', sans-serif; line-height: 1.1; font-weight: 450;"><i class="fas fa-trophy"></i> <b>Best Paper Award</b></span> <br/> -->
