--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
                                 <span class="conf"><a class="confshort" href="https://www2023.thewebconf.org/">WWW'23</a> | The 2023 ACM Web Conference (aka WWW)</span><br>     
                                 <a class="tag" href="https://dl.acm.org/doi/10.1145/3543507.3583380" target="_blank">paper</a>
                                 <a class="tag" href="https://github.com/LCS2-IIITD/READER" target="_blank">code</a>
+                                <a class="tag" href="https://docs.google.com/presentation/d/1rolZQ6IgcspsXGc41Vwpoh091u9iOLJXxYpXbuh3BSc/edit?usp=sharing" target="_blank">slides</a>
+                                
                     </p></div></div>
 
                     
@@ -117,6 +119,7 @@
                                 <span class="thisauthor"> Aseem Srivastava</span>, Tharun Suresh, Sarah (Grin) Lord, Md. Shad Akhtar, Tanmoy Chakraborty<br>
                                 <span class="conf"><a class="confshort" href="https://kdd.org/kdd2022/">KDD'22</a> | ACM's Knowledge Discovery and Data Mining - SIGKDD 2022</span><br>     
                                 <a class="tag" href="https://arxiv.org/abs/2206.03886" target="_blank">paper</a>
+                                <a class="tag" href="https://docs.google.com/presentation/d/16PMNUMW7_VlyeZnZqkfRR1wNGcYnoXg45_CLVdTCEG4/edit?usp=sharing" target="_blank">slides</a>
                                 <!-- <a class="tag" href="#" target="_blank">video</a> -->
                     </p></div></div>
 
@@ -134,6 +137,7 @@
                                 <a class="tag" href="https://dl.acm.org/doi/10.1145/3488560.3498509" target="_blank">paper</a>
                                 <a class="tag" href="https://github.com/LCS2-IIITD/SPARTA_WSDM2022" target="_blank">code</a>
                                 <a class="tag" href="https://github.com/LCS2-IIITD/SPARTA_WSDM2022/blob/main/README.md#hope-dataset-access-request" target="_blank">dataset</a>
+                                <a class="tag" href="https://docs.google.com/presentation/d/1k3x1JYTlNGvSCipWwBFgtJia3GwwquXmAHA-8-3KLFo/edit?usp=sharing" target="_blank">slides</a>
                     </p></div></div>
 
                 <hr>
