--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <meta property="twitter:description"
         content="Aseem's personal website">
     <meta property="twitter:image"
-        content="images/aseem.png">
+        content="images/aseem.jpeg">
 
     <meta name="theme-color" content="#222222">
 
@@ -57,15 +57,14 @@
   </head>
 
   <body>
-    <!-- <h1>Hello, world!</h1> -->
     <div class="container pt-5 allstuffp">
         <div class="row pt-5 allstuff">
             <div class="col-md-4 pt-5">
                 <div class="fixed-posi">
                     <p class="name" style="font-family: 'Titillium Web', sans-serif;"><span style="font-weight: 600;">Aseem </span>Srivastava</p>
-                    <img lsrc="images/aseem.png" class="profilepic mt-3 mb-2 rounded ml-2">
+                    <img lsrc="images/aseem.jpeg" class="profilepic mt-3 mb-2 rounded ml-2">
                     
-                    <div class="pt-5 menur"><a class="menulink" target="_blank" href="./assets/Aseem_Srivastava_Resume.pdf"><i class="had fas fa-file-alt"></i>&nbsp; resume</a></div>
+                    <div class="pt-5 menur"><a class="menulink" target="_blank" href="./assets/Aseem_Research_Resume.pdf"><i class="had fas fa-file-alt"></i>&nbsp; resume</a></div>
                     <div class=""><a class="menulink" target="_blank" href="mailto:aseems@iiitd.ac.in"><i class="fas fa-envelope"></i>&nbsp; email</a></div>
                     <div class=""><a class="menulink" target="_blank" href="https://scholar.google.com/citations?user=kgykojoAAAAJ&hl=en&authuser=1"><i class="fab fa-google"></i>&nbsp; scholar</a></div>
                     <div class=""><a class="menulink" target="_blank" href="https://github.com/as3eem"><i class="had fab fa-github"></i>&nbsp; github</a></div>
@@ -82,18 +81,20 @@
                     <p class="header pt-3">News and Updates</p>
 
                     <ul>
-                        <li><b>January 2023:</b> Our paper on counseling dialogue generation got accepted at WWW'23.</li>
-                        <li><b>January 2023:</b> I will be attending Google Research Week 2023.</li>
-                        <li><b>June 2022:</b> Received ACM India Travel Award to present our paper in KDD.</li>
-                        <li><b>May 2022:</b> Our paper on counseling summarization got accepted at KDD 2022.</li>
-                        <li><b>May 2022:</b> Received ACL 2022 Student Volunteer Award.</li>
-                        <li><b>March 2022:</b> Our paper on mental health symptom identification got accepted at ICWSM 2022.</li>
-                        <li><b>December 2021:</b> Received WSDM Student Grant to present our paper in WSDM 2022 (virtual).</li>
-                        <li><b>October 2021:</b> Our paper on dialogue-act classification in dialogue systems got accepted at WSDM 2022.</li>
+                        <li><b>March 2023:</b> I received <a href="https://edu.google.com/intl/ALL_my/scholarships/google-travel-and-conference-grants/" target="_blank">Google Research Travel Award</a> to attend WWW'23 in Austin, USA.</li>
+                        <li><b>January 2023:</b> Our paper on counseling dialogue generation got accepted at <a href="https://www2023.thewebconf.org/" target="_blank">WWW'23</a>.</li>
+                        <li><b>January 2023:</b> I will be attending <a href="https://sites.google.com/view/researchweek2023" target="_blank">Google Research Week 2023</a> in Banglore, India.</li>
+                        <li><b>June 2022:</b> Received <a href=https://www.iarcs.org.in/activities/grants.php" target="_blank">ACM India Travel Award</a> to present our paper in KDD.</li>
+                        <li><b>May 2022:</b> Our paper on counseling summarization got accepted at <a href="https://kdd.org/kdd2022/" target="_blank">KDD 2022</a>.</li>
+                        <li><b>March 2022:</b> Our paper on mental health symptom identification got accepted at <a href="https://www.icwsm.org/2022/index.html/" target="_blank">ICWSM 2022</a>.</li>
                     </ul>
                         <a class="btn btn-link" data-toggle="collapse" href="#news_collapsed" role="button" aria-expanded="false" aria-controls="news_collapsed">Show more</a>
                         <span class="collapse" id="news_collapsed">
                             <ul>
+                                <li><b>May 2022:</b> Received ACL 2022 Student Volunteer Award.</li>
+                                <!-- March -->
+                                <li><b>December 2021:</b> Received WSDM Student Grant to present our paper in WSDM 2022 (virtual).</li>
+                                <li><b>October 2021:</b> Our paper on dialogue-act classification in dialogue systems got accepted at WSDM 2022.</li>
                                 <li><b>October 2021:</b> Received EMNLP 2021 Student Volunteer Award.</li>
                                 <li><b>August 2021:</b> Received ACL 2021 Student Volunteer Award.</li>
                                 <li><b>August 2020:</b> Started my PhD at IIIT Delhi</li>  
@@ -105,7 +106,7 @@
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                                 <span class="papertitle">Response-act Guided Reinforced Dialogue Generation for Mental Health Counseling</span><br>
                                 <span class="thisauthor"> Aseem Srivastava</span>, Ishan Pandey, Md. Shad Akhtar, Tanmoy Chakraborty<br>
-                                <span class="conf"><a class="confshort" href="https://www2023.thewebconf.org/">WWW'23</a> | The 2023 ACM Web Conference (aka WWW)</span><br>     
+                                <span class="conf"><a class="confshort" href="https://www2023.thewebconf.org/"><b>WWW'23</b></a> | The 2023 ACM Web Conference (aka WWW)</span><br>     
                                 <a class="tag" href="https://dl.acm.org/doi/10.1145/3543507.3583380" target="_blank">paper</a>
                                 <a class="tag" href="https://github.com/LCS2-IIITD/READER" target="_blank">code</a>
                                 <a class="tag" href="https://docs.google.com/presentation/d/1rolZQ6IgcspsXGc41Vwpoh091u9iOLJXxYpXbuh3BSc/edit?usp=sharing" target="_blank">slides</a>
@@ -117,23 +118,22 @@
                                 <span class="papertitle">Counseling Summarization using Mental Health Knowledge Guided Utterance Filtering</span><br>
                                 <!-- <span style="font-family: 'Roboto', sans-serif; line-height: 1.1; font-weight: 450;"><i class="fas fa-trophy"></i> <b>Best Paper Award</b></span> <br/> -->
                                 <span class="thisauthor"> Aseem Srivastava</span>, Tharun Suresh, Sarah (Grin) Lord, Md. Shad Akhtar, Tanmoy Chakraborty<br>
-                                <span class="conf"><a class="confshort" href="https://kdd.org/kdd2022/">KDD'22</a> | ACM's Knowledge Discovery and Data Mining - SIGKDD 2022</span><br>     
+                                <span class="conf"><a class="confshort" href="https://kdd.org/kdd2022/"><b>KDD'22</b></a> | ACM's Knowledge Discovery and Data Mining - SIGKDD 2022</span><br>     
                                 <a class="tag" href="https://arxiv.org/abs/2206.03886" target="_blank">paper</a>
                                 <a class="tag" href="https://docs.google.com/presentation/d/16PMNUMW7_VlyeZnZqkfRR1wNGcYnoXg45_CLVdTCEG4/edit?usp=sharing" target="_blank">slides</a>
-                                <!-- <a class="tag" href="#" target="_blank">video</a> -->
                     </p></div></div>
 
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                                 <span class="papertitle">A Computational Approach to Understand Mental Health from Reddit: Knowledge-aware Multitask Learning Framework</span><br>
                                 Usha Lokala, <span class="thisauthor"> Aseem Srivastava</span>, Triyasha Ghosh Dastidar, Tanmoy Chakraborty, Md Shad Akthar, Maryam Panahiazar, Amit Sheth<br>
-                                <span class="conf"><a class="confshort" href="https://www.icwsm.org/2023/index.html/"> ICWSM'22</a> | The International AAAI Conference on Web and Social Media 2022</span><br>                        
+                                <span class="conf"><a class="confshort" href="https://www.icwsm.org/2023/index.html/"><b>ICWSM'22</b></a> | The International AAAI Conference on Web and Social Media 2022</span><br>                        
                                 <a class="tag" href="https://ojs.aaai.org/index.php/ICWSM/article/view/19322" target="_blank">paper</a>
                     </p></div></div>
 
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                                 <span class="papertitle">Speaker and Time-aware Joint Contextual Learning for Dialogue-act Classification in Counselling Conversations</span><br>
                                 Ganeshan Malhotra, Abdul Waheed, <span class="thisauthor"> Aseem Srivastava</span>, Md Shad Akhtar, Tanmoy Chakraborty<br>
-                                <span class="conf"><a class="confshort" href="https://www.wsdm-conference.org/2022/"> WSDM'22</a> | The 15th ACM International WSDM Conference</span><br>                        
+                                <span class="conf"><a class="confshort" href="https://www.wsdm-conference.org/2022/"> <b>WSDM'22</b></a> | The 15th ACM International WSDM Conference</span><br>                        
                                 <a class="tag" href="https://dl.acm.org/doi/10.1145/3488560.3498509" target="_blank">paper</a>
                                 <a class="tag" href="https://github.com/LCS2-IIITD/SPARTA_WSDM2022" target="_blank">code</a>
                                 <a class="tag" href="https://github.com/LCS2-IIITD/SPARTA_WSDM2022/blob/main/README.md#hope-dataset-access-request" target="_blank">dataset</a>
@@ -144,7 +144,7 @@
 
                 <p class="header pt-3">Position of Responsibility</p>
                 <ul>
-                    <li>Web Chair at <a href="https://lcs2.in/ICON-2022" target="_blank">ICON 2022</a> happening in New Delhi.</li>
+                    <li>Web Chair at <a href="https://lcs2.in/ICON-2022" target="_blank">ICON 2022</a> happening in New Delhi, India.</li>
                     <li>Web Chair at <a href="https://lcs2.in/ICON-2022" target="_blank">CONSTRAINT Workshop 2022</a> -- Collocated with ACL 2022.</li>
                 </ul>
 
