preview images added

--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/nicons/apple-touch-icon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+    <meta property="og:site_name" content="Aseem Srivastava">
+    <meta property="og:title" content="Research Scholar" />
+    <meta property="og:description" content="Aseem Srivastava is a computer science researcher at IIIT Delhi" />
+    <meta property="og:image" itemprop="image" content="images/aseem.jpeg">
+    <meta property="og:type" content="website" />
+    <meta property="og:updated_time" content="1440432930" />
+
     <link rel="icon" href="images/aseem.jpeg">
 
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="images/nicons/favicon-32x32.png">
