added few links

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <body>
     <div class="container pt-5 allstuffp">
         <div class="row pt-5 allstuff">
-            <div class="col-md-4 pt-5">
+            <div class="col-md-3 pt-5">
                 <div class="fixed-posi">
                     <p class="name" style="font-family: 'Titillium Web', sans-serif;"><span style="font-weight: 600;">Aseem </span>Srivastava</p>
                     <img lsrc="images/aseem.jpeg" class="profilepic mt-3 mb-2 rounded ml-2">
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="col-md-8 pt-5 about">
+            <div class="col-md-9 pt-5 about">
                     <p class="header pt-3">Hello!</p>
                         I am a third-year PhD student in the Laboratory for Computational Social Systems (<a href="https://lcs2.iiitd.edu.in/" target="_blank">LCS2</a>) at IIIT-Delhi, where I am advised by <a href="http://faculty.iiitd.ac.in/~shad.akhtar/" target="_blank">Dr. Md. Shad Akhtar</a> and <a href="http://faculty.iiitd.ac.in/~tanmoy/" target="_blank">Dr. Tanmoy Chakraborty</a>. My interests lie broadly at the intersection of  Natural Language Processing, and Conversational AI with a focus on mental health counseling methods. In particular, my research aligns toward understanding mental health clients on digital counseling systems using NLP and Deep Learning.
                         <br>
@@ -89,12 +89,13 @@
                     <p class="header pt-3">News and Updates</p>
 
                     <ul>
-                        <li><b>March 2023:</b> I received <a href="https://edu.google.com/intl/ALL_my/scholarships/google-travel-and-conference-grants/" target="_blank">Google Research Travel Award</a> to attend WWW'23 in Austin, USA.</li>
-                        <li><b>January 2023:</b> Our paper on counseling dialogue generation got accepted at <a href="https://www2023.thewebconf.org/" target="_blank">WWW'23</a>.</li>
+                        <li><b>March 2023:</b> Received <a href="https://edu.google.com/intl/ALL_my/scholarships/google-travel-and-conference-grants/" target="_blank">Google Research Travel Award</a> to present our paper at WWW'23 in Austin, USA.</li>
+                        <li><b>January 2023:</b> Our paper on counseling dialogue generation got accepted at <a href="https://www2023.thewebconf.org/" target="_blank">WWW 2023</a>.</li>
                         <li><b>January 2023:</b> I will be attending <a href="https://sites.google.com/view/researchweek2023" target="_blank">Google Research Week 2023</a> in Banglore, India.</li>
-                        <li><b>June 2022:</b> Received <a href=https://www.iarcs.org.in/activities/grants.php" target="_blank">ACM India Travel Award</a> to present our paper in KDD.</li>
+                        <li><b>June 2022:</b> Received <a href=https://www.iarcs.org.in/activities/grants.php" target="_blank">ACM India Travel Award</a> to present our paper at KDD'22 in Washington DC, USA.</li>
                         <li><b>May 2022:</b> Our paper on counseling summarization got accepted at <a href="https://kdd.org/kdd2022/" target="_blank">KDD 2022</a>.</li>
                         <li><b>March 2022:</b> Our paper on mental health symptom identification got accepted at <a href="https://www.icwsm.org/2022/index.html/" target="_blank">ICWSM 2022</a>.</li>
+                        <li><b>October 2021:</b> Our paper on dialogue-act classification in dialogue systems got accepted at <a href="https://www.wsdm-conference.org/2022/" target="_blank">WSDM 2022</a>.</li>
                     </ul>
                         <a class="btn btn-link" data-toggle="collapse" href="#news_collapsed" role="button" aria-expanded="false" aria-controls="news_collapsed">Show more</a>
                         <span class="collapse" id="news_collapsed">
@@ -102,7 +103,7 @@
                                 <li><b>May 2022:</b> Received ACL 2022 Student Volunteer Award.</li>
                                 <!-- March -->
                                 <li><b>December 2021:</b> Received WSDM Student Grant to present our paper in WSDM 2022 (virtual).</li>
-                                <li><b>October 2021:</b> Our paper on dialogue-act classification in dialogue systems got accepted at WSDM 2022.</li>
+                                <!-- October -->
                                 <li><b>October 2021:</b> Received EMNLP 2021 Student Volunteer Award.</li>
                                 <li><b>August 2021:</b> Received ACL 2021 Student Volunteer Award.</li>
                                 <li><b>August 2020:</b> Started my PhD at IIIT Delhi</li>  
@@ -128,6 +129,7 @@
                                 <span class="thisauthor"> Aseem Srivastava</span>, Tharun Suresh, Sarah (Grin) Lord, Md. Shad Akhtar, Tanmoy Chakraborty<br>
                                 <span class="conf"><a class="confshort" href="https://kdd.org/kdd2022/"><b>KDD'22</b></a> | ACM's Knowledge Discovery and Data Mining - SIGKDD 2022</span><br>     
                                 <a class="tag" href="https://arxiv.org/abs/2206.03886" target="_blank">paper</a>
+                                <a class="tag" href="https://github.com/LCS2-IIITD/MEMO" target="_blank">dataset</a>
                                 <a class="tag" href="https://docs.google.com/presentation/d/16PMNUMW7_VlyeZnZqkfRR1wNGcYnoXg45_CLVdTCEG4/edit?usp=sharing" target="_blank">slides</a>
                     </p></div></div>
 
