--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                     <p class="header pt-3">News and Updates</p>
 
                     <ul>
+
+                        <li><b>November 2023:</b> Our proposal for a tutorial on dialogue system for counseling got accepted at <a href="http://icon2023.unigoa.ac.in/accepted-tutorials-workshops.php" target="_blank">ICON '23</a>.</li>
                         <li><b>March 2023:</b> Received <a href="https://edu.google.com/intl/ALL_my/scholarships/google-travel-and-conference-grants/" target="_blank">Google Research Travel Award</a> to present our paper at WWW'23 in Austin, USA.</li>
                         <li><b>January 2023:</b> Our paper on counseling dialogue generation got accepted at <a href="https://www2023.thewebconf.org/" target="_blank">WWW 2023</a>.</li>
                         <li><b>January 2023:</b> I will be attending <a href="https://sites.google.com/view/researchweek2023" target="_blank">Google Research Week 2023</a> in Banglore, India.</li>
@@ -157,9 +159,24 @@
                                 <a class="tag" href="https://docs.google.com/presentation/d/1k3x1JYTlNGvSCipWwBFgtJia3GwwquXmAHA-8-3KLFo/edit?usp=sharing" target="_blank">slides</a>
                     </p></div></div>
 
-                
                 <hr>
 
+
+                <p class="header pt-3">Organized Tutorials</p>
+                    <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
+                                <span class="papertitle">Building Blocks of AI-Driven Mental Health Counseling</span><br>
+                                Organizers: <span class="thisauthor"> Aseem Srivastava</span>, Neeraj, Yash Kumar Atri, Shivani Kumar, Shad Akhtar, Tanmoy Chakraborty<br>
+                                <span class="conf"><a class="confshort" href="https://www.icwsm.org/2023/index.html/"><b>ICON'23</b></a> | International Conference on Natural Language Processing ICON 2023</span><br>                        
+                                <a class="tag" href="http://icon2023.unigoa.ac.in/accepted-tutorials-workshops.php" target="_blank">website</a>
+                    </p></div></div>
+
+                    <!-- <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
+                        <span class="papertitle">Dec' 23 &nbsp | &nbsp Building Blocks of AI-Driven Mental Health Counseling</span><br>
+                        <span class="conf"><a class="confshort" href="https://cordai.org/"><b>Cord.AI</b></a> &nbsp | &nbsp 
+                        <a class="tag" href="./assets/CordAI_Talk_Aseem.pdf" target="_blank">Slides</a>
+                    </p></div></div> -->
+
+                <hr>
 
                 <p class="header pt-3">Invited Talks</p>
                     
