--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <p class="name" style="font-family: 'Titillium Web', sans-serif;"><span style="font-weight: 600;">Aseem </span>Srivastava</p>
                     <img lsrc="images/aseem.jpeg" class="profilepic mt-3 mb-2 rounded ml-2">
                     
-                    <div class="pt-5 menur"><a class="menulink" target="_blank" href="./assets/Aseem_Resume_2023.pdf"><i class="had fas fa-file-alt"></i>&nbsp; resume</a></div>
+                    <div class="pt-5 menur"><a class="menulink" target="_blank" href="./assets/Aseem_Resume_2024.pdf"><i class="had fas fa-file-alt"></i>&nbsp; resume</a></div>
                     <div class=""><a class="menulink" target="_blank" href="mailto:aseems@iiitd.ac.in"><i class="fas fa-envelope"></i>&nbsp; email</a></div>
                     <div class=""><a class="menulink" target="_blank" href="https://scholar.google.com/citations?user=kgykojoAAAAJ&hl=en&authuser=1"><i class="fab fa-google"></i>&nbsp; scholar</a></div>
                     <div class=""><a class="menulink" target="_blank" href="https://github.com/as3eem"><i class="had fab fa-github"></i>&nbsp; github</a></div>
@@ -85,10 +85,15 @@
                     <p class="header pt-3">Hello!</p>
                         I am a fourth-year PhD student in the Laboratory for Computational Social Systems (<a href="https://lcs2.iiitd.edu.in/" target="_blank">LCS2</a>) at IIIT-Delhi, where I am advised by <a href="http://faculty.iiitd.ac.in/~shad.akhtar/" target="_blank">Dr. Md. Shad Akhtar</a> and <a href="http://faculty.iiitd.ac.in/~tanmoy/" target="_blank">Dr. Tanmoy Chakraborty</a>. My interests lie broadly at the intersection of  Natural Language Processing, and Conversational AI with a focus on mental health counseling methods. In particular, my research aligns toward understanding mental health clients on digital counseling systems using NLP and Deep Learning.
                         To know more, refer to my resume or drop me an <a href="mailto:aseems@iiitd.ac.in">email</a>!
+
+                        <br><br>
+                        <span style="color:rgb(143, 0, 0); font-size: large;"><b>I am on the job market. Currently, I am looking for a research internship position in the industry or academia tentatively starting from April/May.</b></span>
                     <p class="header pt-3">News and Updates</p>
 
                     <ul>
 
+                        <li><b>February 2024:</b> Got invited to present a lightning talk and poster at <a href="https://event.india.acm.org/arcs/home/" target="_blank">ACM ARCS '24</a> in NISER.</li>
+                        <li><b>February 2024:</b> Got selected for <a href="https://sites.google.com/view/researchweek24/home" target="_blank">Google Research Week 2024</a> second time in a row.</li>
                         <li><b>November 2023:</b> Our proposal for a tutorial on dialogue system for counseling got accepted at <a href="http://icon2023.unigoa.ac.in/accepted-tutorials-workshops.php" target="_blank">ICON '23</a>.</li>
                         <li><b>March 2023:</b> Received <a href="https://edu.google.com/intl/ALL_my/scholarships/google-travel-and-conference-grants/" target="_blank">Google Research Travel Award</a> to present our paper at WWW'23 in Austin, USA.</li>
                         <li><b>January 2023:</b> Our paper on counseling dialogue generation got accepted at <a href="https://www2023.thewebconf.org/" target="_blank">WWW 2023</a>.</li>
@@ -181,9 +186,17 @@
                 <p class="header pt-3">Invited Talks</p>
                     
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
+                        <span class="papertitle">Feb' 24 &nbsp | &nbsp  Invited to present a lightning talk and poster on Dialogue Generation at ACM ARCS 2024.</span><br>
+                        <span class="conf"><a class="confshort" href="https://event.india.acm.org/arcs/home/"><b>ACM India</b></a> &nbsp | &nbsp 
+                        <a class="tag" href="./assets/ACM_ARCS_WWW.pdf" target="_blank">Poster</a>
+                        <a class="tag" href="https://www.linkedin.com/posts/as3eem_acmarcs2024-www2023-ai4mh-activity-7161764952230313986-dXss" target="_blank">LinkedIn</a>
+                    </p></div></div>
+
+                    <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                         <span class="papertitle">Nov' 23 &nbsp | &nbsp Applied AI in Mental Health – Building Bridges from Scratch to Transformation 🚀</span><br>
                         <span class="conf"><a class="confshort" href="https://cordai.org/"><b>Cord.AI</b></a> &nbsp | &nbsp 
                         <a class="tag" href="./assets/CordAI_Talk_Aseem.pdf" target="_blank">Slides</a>
+                        <a class="tag" href="https://www.linkedin.com/feed/update/urn:li:activity:7125528530066550784" target="_blank">LinkedIn</a>
                     </p></div></div>
 
                 <hr>
