no more on market

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 
             <div class="col-md-9 pt-5 about">
                     <p class="header pt-3">Hello!</p>
-                        I am a fourth-year PhD student in the Laboratory for Computational Social Systems (<a href="https://lcs2.iiitd.edu.in/" target="_blank">LCS2</a>) at IIIT-Delhi, where I am advised by <a href="http://faculty.iiitd.ac.in/~shad.akhtar/" target="_blank">Dr. Md. Shad Akhtar</a> and <a href="http://faculty.iiitd.ac.in/~tanmoy/" target="_blank">Dr. Tanmoy Chakraborty</a>. My interests lie broadly at the intersection of  Natural Language Processing, and Conversational AI with a focus on mental health counseling methods. In particular, my research aligns toward understanding mental health clients on digital counseling systems using NLP and Deep Learning.
+                        I am a fourth-year research scholar in the Laboratory for Computational Social Systems (<a href="https://lcs2.iiitd.edu.in/" target="_blank">LCS2</a>) at IIIT-Delhi, where I am advised by <a href="http://faculty.iiitd.ac.in/~shad.akhtar/" target="_blank">Dr. Md. Shad Akhtar</a> and <a href="http://faculty.iiitd.ac.in/~tanmoy/" target="_blank">Dr. Tanmoy Chakraborty</a>. My interests lie broadly at the intersection of  Natural Language Processing, and Conversational AI with a focus on mental health counseling methods. In particular, my research aligns toward understanding mental health clients on digital counseling systems using NLP and Deep Learning.
                         To know more, refer to my resume or drop me an <a href="mailto:aseems@iiitd.ac.in">email</a>!
 
-                        <br><br>
-                        <span style="color:rgb(143, 0, 0); font-size: large;"><b>I am on the job market. Currently, I am looking for a research internship position in the industry or academia tentatively starting from May/June.</b></span>
+                        <!-- <br><br>
+                        <span style="color:rgb(143, 0, 0); font-size: large;"><b>I am on the job market. Currently, I am looking for a research internship position in the industry or academia tentatively starting from May/June.</b></span> -->
                     <p class="header pt-3">News and Updates</p>
 
                     <ul>
