--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
                     <p class="header pt-3">Publications</p>
                     
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
+                        <span class="papertitle">Exploring the Efficacy of Large Language Models in Summarizing Mental Health Counseling Sessions: A Benchmark Study</span><br>
+                        Prottay Kumar Adhikary, <span class="thisauthor"> Aseem Srivastava</span>, Shivani Kumar, Salam Michael Singh, Puneet Manuja, Jini K Gopinath, Vijay Krishnan, Swati Kedia, Koushik Sinha Deb, Tanmoy Chakraborty<br>
+                        <span class="conf"><a class="confshort" href="https://www2023.thewebconf.org/"><b>JMIR-MH '24</b></a> | Journal of Medical Internet Research - Mental Health 2024</span><br>     
+                        <a class="tag" href="https://arxiv.org/abs/2402.19052" target="_blank">paper</a> 
+                    </p></div></div>
+
+
+                    <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                                 <span class="papertitle">Response-act Guided Reinforced Dialogue Generation for Mental Health Counseling</span><br>
                                 <span class="thisauthor"> Aseem Srivastava</span>, Ishan Pandey, Md. Shad Akhtar, Tanmoy Chakraborty<br>
                                 <span class="conf"><a class="confshort" href="https://www2023.thewebconf.org/"><b>WWW'23</b></a> | The 2023 ACM Web Conference (aka WWW)</span><br>     
@@ -157,20 +165,17 @@
                                 <a class="tag" href="https://docs.google.com/presentation/d/1k3x1JYTlNGvSCipWwBFgtJia3GwwquXmAHA-8-3KLFo/edit?usp=sharing" target="_blank">slides</a>
                     </p></div></div>
 
+
+
                     <hr style="border-top: dotted 2px; color: #D3D3D3;" />
+
+
 
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                         <span class="papertitle">Critical Behavioral Traits Foster Peer Engagement in Online Mental Health Communities</span><br>
                         <span class="thisauthor"> Aseem Srivastava</span>, Tanya Gupta, Alison Cerezo, Grin Lord, Md Shad Akhtar, Tanmoy Chakraborty<br>
                         <span class="conf">Under Review</span><br>     
                         <a class="tag" href="https://arxiv.org/abs/2309.01618" target="_blank">paper</a>    
-                    </p></div></div>
-
-                    <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
-                        <span class="papertitle">Exploring the Efficacy of Large Language Models in Summarizing Mental Health Counseling Sessions: A Benchmark Study</span><br>
-                        Prottay Kumar Adhikary, <span class="thisauthor"> Aseem Srivastava</span>, Shivani Kumar, Salam Michael Singh, Puneet Manuja, Jini K Gopinath, Vijay Krishnan, Swati Kedia, Koushik Sinha Deb, Tanmoy Chakraborty<br>
-                        <span class="conf">Under Review</span><br> 
-                        <a class="tag" href="https://arxiv.org/abs/2402.19052" target="_blank">paper</a>    
                     </p></div></div>
 
                 <hr>
