EMNLP paper link added

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <span class="papertitle">Knowledge Planning in Large Language Models for Domain-Aligned Counseling Summarization</span><br>
                         <span class="thisauthor"> Aseem Srivastava</span>, Smriti Joshi, Tanmoy Chakraborty, Md Shad Akhtar<br>
                         <span class="conf"><a class="confshort" href="https://2024.emnlp.org/"><b>EMNLP (Main) '24</b></a> | Conference on Empirical Methods in Natural Language Processing 2024</span><br>     
-                        <!-- <a class="tag" href="https://arxiv.org/abs/2402.19052" target="_blank">paper</a>  -->
+                        <a class="tag" href="https://arxiv.org/abs/2409.14907" target="_blank">paper</a> 
                     </p></div></div>
 
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
