--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="col-md-3 pt-5">
                 <div class="fixed-posi">
                     <p class="name" style="font-family: 'Titillium Web', sans-serif;"><span style="font-weight: 600;">Aseem </span>Srivastava</p>
-                    <img lsrc="images/aseem.jpeg" class="profilepic mt-3 mb-2 rounded ml-2">
+                    <img lsrc="images/aseem.jpg" class="profilepic mt-3 mb-2 rounded ml-2">
                     
                     <div class="pt-5 menur"><a class="menulink" target="_blank" href="./assets/Aseem_acad_CV.pdf"><i class="had fas fa-file-alt"></i>&nbsp; resume</a></div>
                     <div class=""><a class="menulink" target="_blank" href="mailto:aseems@iiitd.ac.in"><i class="fas fa-envelope"></i>&nbsp; email</a></div>
