--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="pt-5 menur"></div>
                     aseem.srivastava [at] mbzuai.ac.ae
                     <hr>
-                    <div class=""><a class="menulink" target="_blank" href="./assets/Aseem_acad_CV.pdf"><i class="had fas fa-file-alt"></i>&nbsp; resume</a></div>
+                    <div class=""><a class="menulink" target="_blank" href="./assets/Aseem_cv.pdf"><i class="had fas fa-file-alt"></i>&nbsp; resume</a></div>
                     <div class=""><a class="menulink" target="_blank" href="https://linkedin.com/in/as3eem"><i class="fab fa-linkedin"></i>&nbsp; linkedin</a></div>
                     <div class=""><a class="menulink" target="_blank" href="https://github.com/as3eem"><i class="had fab fa-github"></i>&nbsp; github</a></div>
                     <div class=""><a class="menulink" target="_blank" href="https://scholar.google.com/citations?user=kgykojoAAAAJ&hl=en&authuser=1"><i class="fab fa-google"></i>&nbsp; scholar</a></div>
